[tool.poetry]
name = "pytdoa"
version = "0.1.0"
description = "TDOA localization for low cost sensors"
authors = ["Yago Lizarribar <yago.lizarribar@imdea.org>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.22.2"
scipy = "^1.8.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
ipykernel = "^6.9.1"
ipywidgets = "^7.6.5"
jupyter = "^1.0.0"
notebook = "^6.4.8"
seaborn = "^0.11.2"
plotly = "^5.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
